
\name{NEWS}
\encoding{UTF-8}
\title{News for Package \pkg{inum}}

\section{Changes in version 0.9-2 (2017-02-27)}{
\itemize{
  \item{Introduce \code{is.na} methods.}
}
}

\section{Changes in version 0.9-1 (2017-02-01)}{
\itemize{
  \item{Make sure all NAs are coded as 0.}
}
}


\section{Changes in version 0.9-0 (2016-12-09)}{
\itemize{
  \item{ \pkg{inum} published on CRAN.}
}
}