@@ -1,17 +1,17 @@
 Package: inum
 Title: Interval and Enum-Type Representation of Vectors
-Date: 2016-02-27
-Version: 0.9-2
+Date: 2017-12-12
+Version: 1.0-0
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org")
 Description: Enum-type representation of vectors and representation
   of intervals, including a method of coercing variables in data frames.
 Depends: R (>= 3.3.0)
-Imports: stats
+Imports: stats, libcoin (>= 1.0-0)
 License: GPL-2
 NeedsCompilation: no
-Packaged: 2017-02-27 14:03:20 UTC; hothorn
+Packaged: 2017-12-12 14:25:09 UTC; hothorn
 Author: Torsten Hothorn [aut, cre]
 Maintainer: Torsten Hothorn <Torsten.Hothorn@R-project.org>
 Repository: CRAN
-Date/Publication: 2017-02-27 15:31:41
+Date/Publication: 2017-12-12 18:29:15 UTC
