@@ -1,12 +1,12 @@
-2a489fa59e27296213779b96e01517f3 *DESCRIPTION
-99243222f537e183d82acea0dd4d71c2 *NAMESPACE
-b1967d28928d076a7066d1f2945ba94d *R/enum.R
+ae8faa105605a52cc6cf74b412114889 *DESCRIPTION
+328d1e76276ad8a4019e5a1746cd5e6a *NAMESPACE
+7ceb471fb19e5b0645ecf0bf34222feb *R/enum.R
 dd22dd4311f59d57ffc0b7b6cc98b62b *R/interval.R
-c1ec793dd3772e1acd6a0d57faab9342 *R/inum.R
+19bc8067f78f16927b3eae9eb626321f *R/inum.R
 339c2c619522533780dc2ab641fef27d *cleanup
-6a87b6bbce1b1e4654928943e885a7e7 *inst/NEWS.Rd
+dcc0e9c1f0566e288bf419a848bdd1d0 *inst/NEWS.Rd
 26c4e331027b064acf4b32ab14b2acdd *man/enum.Rd
 060c4485f8a056cc3908272e5a3100c3 *man/interval.Rd
-2633dd4261ee84616992e8ef5e2e53a4 *man/inum.Rd
-fe2b1b6f29e191c3ad34a10f5996e185 *tests/regtest.R
-f162ae3468fe4bc9c85ae46c2423fb79 *tests/regtest.Rout.save
+be4783f35d143567f86120f7048ac0be *man/inum.Rd
+04f38b05d5163e965492b8617f9aaf94 *tests/regtest.R
+eaf6c6cfa12350ddd1ea8b613afe1d87 *tests/regtest.Rout.save
